--- a/docs/partner_editable/architecture.adoc
+++ b/docs/partner_editable/architecture.adoc
@@ -14,7 +14,7 @@ As shown in <<architecture1>>, the Quick Start sets up the following:
 * In the public subnet:
 ** A managed network address translation (NAT) gateway to allow outbound internet access for resources in the private subnet.*
 ** An Elastic IP address to allow the Amazon EC2 instance to communicate with the internet.  
-** An EC2 G4dn instance hosting an editorial workstation running Windows Server 2019, which is accessed via Teradici PCoIP and configured with Adobe Premiere Pro with a pop-up per-boot cycle for logging in to Adobe Creative Cloud.
+** One or more editorial workstations hosted on an EC2 G4dn instance running Windows Server 2019, which is accessed via Teradici PCoIP and configured with Adobe Premiere Pro with a pop-up per-boot cycle for logging in to Adobe Creative Cloud.
 * In the private subnet:
 ** A cluster of four Qumulo Core EC2 instances providing 1 TB or 12 TB of usable capacity.
 ** Multiple Amazon Elastic Block Store (Amazon EBS) volumes connected to the Qumulo cluster. Options include:
@@ -25,7 +25,7 @@ As shown in <<architecture1>>, the Quick Start sets up the following:
 *** Joins the cluster to the Active Directory domain.
 *** Tags all Amazon EBS volumes with the CloudFormation stack name and modifies the AWS Key Management Service (AWS KMS) customer master key (CMK) policy if a CMK is specified in the template.
 ** An Active Directory domain controller and local DNS server hosted on an EC2 M5 (m5.large) instance. All workstations and the Qumulo cluster are joined to the Active Directory domain automatically. The Active Directory server also provides all DNS services local to the VPC while forwarding public requests to Amazon Route 53.
-** One Lambda function to send metrics for the Qumulo cluster to Amazon CloudWatch.
-** One Lambda function to monitor the health of EBS volumes, automatically replace unhealthy volumes, and deliver SNS notifications via Amazon SNS.
+** A Lambda function to send metrics for the Qumulo cluster to Amazon CloudWatch.
+** A Lambda function to monitor the health of EBS volumes, automatically replace unhealthy volumes, and deliver SNS notifications via Amazon SNS.
 
 [.small]#*The template that deploys the Quick Start into an existing VPC skips the components marked by asterisks and prompts you for your existing VPC configuration.#
