--- a/docs/partner_editable/product_description.adoc
+++ b/docs/partner_editable/product_description.adoc
@@ -2,8 +2,10 @@
 // Briefly describe the software. Use consistent and clear branding. 
 // Include the benefits of using the software on AWS, and provide details on usage scenarios.
 
-Qumulo is a high-performance, multi-protocol file data platform with petabyte scale for managing billions of files in a single namespace on AWS. Qumulo's file data platform is the foundation that makes all files available to all editors for collaborative editorial workflows. 
+Qumulo is a high-performance, multi-protocol file data platform for managing billions of files in a single namespace on AWS. Supporting petabyte-scale data, Qumulo's file data platform is the foundation that makes all files available to all editors for collaborative editorial workflows. 
 
-This Quick Start provides options for 1TB and 12TB usable capacity. Workstations are built on the powerful AWS G4dn family of Amazon Elastic Cloud Compute (Amazon EC2) instances with NVIDIA T4 GPUs and a Teradici PCoIP agent on workstation. With Qumulo's {partner-product-short-name} solution, editors have the same editorial experience as if they are working with local resources.
+This Quick Start builds a Qumulo cluster and one or more editorial workstations all hosted on AWS with options for 1 TB and 12 TB usable capacity. Workstations are built on the AWS G4dn family of Amazon Elastic Cloud Compute (Amazon EC2) instances with NVIDIA T4 GPUs and a Teradici PCoIP agent on the workstation. You can optionally add more workstations as a post-deployment step. 
+
+With Qumulo's {partner-product-short-name} solution, editors have the same editorial experience as if they are working with local resources.
 
 If you prefer larger editorial envrionments, contact Qumulo at mailto:studioq@qumulo.com[studioq@qumulo.com^].
