Parameter template edits

--- a/docs/partner_editable/licenses.adoc
+++ b/docs/partner_editable/licenses.adoc
@@ -1,1 +1,1 @@
-This Quick Start requires a subscription to the Amazon Machine Image (AMI) for Qumulo (either the 1 TB or 12 TB usable capacity option) and the AMI for Teradici, both of which are available from https://aws.amazon.com/marketplace/[AWS Marketplace^]. Additional pricing, terms, and conditions may apply. For instructions, see link:#_deployment_steps[Deployment steps] section.
+This Quick Start requires two subscriptions: one to the Amazon Machine Image (AMI) for Qumulo (either the 1 TB or 12 TB usable capacity option) and the other for AMI for Teradici, both of which are available from https://aws.amazon.com/marketplace/[AWS Marketplace^]. Additional pricing, terms, and conditions may apply. For instructions, see link:#_deployment_steps[Deployment steps] section.
